readme file updated

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="https://kit.fontawesome.com/5f59ca6ad3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="stylesheet.css">
     <title>Wikipedia Search</title>
+    <link rel="icon" href="https://nkb-backend-otg-media-static.s3.ap-south-1.amazonaws.com/ccbp-dynamic-webapps/wiki-logo-img.png" type="image/icon type">
 </head>
 
 <body>
